# NCHC-Agentic-AI-Bootcamp-2026

./: .gitignore  README.md  download.sh  setup.sh
01_NeMo_AutoModel/: README.md  start_jupyter.sh  stop_jupyter.sh
01_NeMo_AutoModel/lab1_pretrain/: lab1_pretrain_nemotron3_wiki.ipynb  pretrain_nemotron3_wiki.yaml
01_NeMo_AutoModel/lab2_sft_peft/: lab2_sft_peft_nemotron3_squad.ipynb  peft_nemotron3_squad.yaml  sft_nemotron3_squad.yaml
02_NIM/: nemotron-nim-tutorial.md
03_NeMoClaw/: NemoClaw-Tutorial.md
03_NeMo_Agent_Toolkit/Advanced/: AIQ-Research-Agent.ipynb  Custom-Agent-Workflows.ipynb
04_NeMo_Agent_Toolkit/: pyproject.toml
04_NeMo_Agent_Toolkit/Basic/: README.md  tutorial_01_hello_world.ipynb  tutorial_02_code_agent.ipynb  tutorial_03_custom_tool.ipynb
04_NeMo_Agent_Toolkit/Basic/nat_config/: config.json
04_NeMo_Agent_Toolkit/Basic/tutorial_01_hello_world/: README.md
04_NeMo_Agent_Toolkit/Basic/tutorial_01_hello_world/configs/: config.yml
04_NeMo_Agent_Toolkit/Basic/tutorial_02_code_agent/: README.md
04_NeMo_Agent_Toolkit/Basic/tutorial_02_code_agent/configs/: config.yml
04_NeMo_Agent_Toolkit/Basic/tutorial_03_custom_tool/: README.md  pyproject.toml
04_NeMo_Agent_Toolkit/Basic/tutorial_03_custom_tool/configs/: config.yml
